--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BHASHI-MD",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "BHASHI-MD MULTI DEVICE WHATSAPP BOT BY VISHWA MIHIRANGA AND BHASHITHA",
   "main": "index.js",
   "scripts": {
@@ -10,51 +10,55 @@
   },
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
-    "9gag":"4.0.0",
-    "mongoose":"8.6.1",
-    "hirunews-scrap": "^1.1.2",
-    "@mrnima/facebook-downloader":"1.0.0",
-    "@dark-yasiya/yt-dl.js":"1.0.4",
-    "human-readable": "^0.2.1",
-    "@dark-yasiya/imgbb.js":"0.0.1",
     "@blackamda/telegram-image-url": "^1.0.0",
-    "@sl-code-lords/esana-news":"1.1.0",
-    "ios-news":"1.0.1",
-    "mathjs": "^11.0.0",
-    "gsmarena-api": "2.0.5",
-    "@whiskeysockets/baileys": "6.6.0",
-    "fb-downloader-scrapper": "^1.0.3",
-    "stream": "0.0.2",
-    "base-58":"0.0.1",
-    "ffmpeg-static":"5.2.0",
-    "form-data": "^4.0.0",
-    "whois": "^2.1.0",
-    "wa-sticker-formatter": "^4.4.4",
-    "axios": "^1.2.5",
-    "dotenv": "^16.4.5",
-    "express": "latest",
-    "file_size_url": "^1.0.4",
-    "fs-extra": "^11.1.0",
-    "megajs": "^1.1.0",
-    "node-fetch": "^2.6.1",
-    "api-dylux": "^1.0.0",
-    "path": "^0.12.7",
-    "pino": "^7.0.5",
-    "webtorrent": "^1.0.0",
-    "pm2": "^5.2.0",
-    "qrcode-terminal": "^0.12.0",
-    "util": "^0.12.4",
-    "vm": "^0.1.0",
     "@bochilteam/scraper": "^4.0.22-alpha.0",
-    "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.4",
-    "tiktokdl": "^0.0.5",
-    "zxcvbn": "^4.4.2",
-    "node-cron":"3.0.3",
-    "n": "^9.0.1",
-    "qrcode": "^1.5.1",
-    "moment": "^2.29.4",
+    "@dark-yasiya/imgbb.js": "^0.0.1",
+    "@dark-yasiya/yt-dl.js": "^1.0.5",
+    "@mrnima/facebook-downloader": "^1.0.0",
+    "@mrnima/instagram-downloader": "^1.0.0",
+    "@mrnima/tiktok-downloader": "^1.0.0",
+    "@sl-code-lords/esana-news": "^1.1.0",
+    "@whiskeysockets/baileys": "^6.6.0",
+    "9gag": "^4.0.0",
+    "api-dylux": "^1.0.0",
+    "axios": "^1.6.6",
+    "base-58": "^0.0.1",
+    "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
+    "express": "^4.18.2",
+    "fb-downloader-scrapper": "^1.0.3",
+    "ffmpeg-static": "^5.2.0",
+    "file_size_url": "^1.0.4",
+    "form-data": "^4.0.0",
+    "fs-extra": "^11.2.0",
+    "gsmarena-api": "^2.0.5",
+    "hirunews-scrap": "^1.1.2",
     "https": "^1.0.0",
-    "yts": "^2.0.0"
+    "human-readable": "^0.2.1",
+    "ios-news": "^1.0.1",
+    "mathjs": "^11.9.1",
+    "megajs": "^1.1.1",
+    "moment": "^2.30.1",
+    "mongoose": "^8.6.1",
+    "n": "^10.1.0",
+    "nima-google-now": "^1.0.1",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^2.6.12",
+    "path": "^0.12.7",
+    "pino": "^8.15.0",
+    "pm2": "^5.3.0",
+    "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
+    "seedr": "^1.1.2",
+    "stream": "^0.0.2",
+    "tiktokdl": "^0.0.5",
+    "util": "^0.12.5",
+    "vm": "^0.1.0",
+    "wa-sticker-formatter": "^4.4.4",
+    "webtorrent": "^1.9.7",
+    "whois": "2.14.2",
+    "yt-search": "^2.11.8",
+    "ytdl-core": "^4.11.5",
+    "zxcvbn": "^4.4.2"
   }
 }
