--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "BHASHI-MD V2",
   "description": "Javascript WhatsApp bot made by Bhashi Team",
-  "logo": "https://telegra.ph/file/ad25b2227fa2a1a01b707.jpg",
+  "logo": "https://raw.githubusercontent.com/vishwamihiranga/BHASHI-PUBLIC/refs/heads/main/IMAGES/%26mainimg.jpeg",
   "keywords": ["BHASHI-MD-V2"],
   "success_url": "/",
 
