--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "Put the session-id here. For Extra Note :- BHASHI-MD~(Megafileid)",
       "required": true
     },  
 
